[package]
name = "gsql"
version = "0.1.0"
edition = "2018"
license = "MIT"
author = "Leon Ding <ding@ibyte.me>"
description = "GSQl is a structured query language code builder for Rust."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
